--- a/src/styles/scss/common.scss
+++ b/src/styles/scss/common.scss
@@ -1,10 +1,10 @@
 ::selection {
-	background: mix($blue, #fff, 80%);
+	background: fade-out($blue, .2);
 	color: #fff;
 }
 
 ::-moz-selection {
-	background: mix($blue, #fff, 80%);
+	background: fade-out($blue, .2);
 	color: #fff;
 }
 
@@ -24,7 +24,7 @@ body {
 }
 
 body {
-	@include font(500);
+	@include font();
 	font-size: 20px;
 	line-height: 1.3;
 	color: $dark;
@@ -33,6 +33,7 @@ body {
 @mixin layout() {
 	width: 90%;
 	max-width: 1600px;
+	margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
