--- a/src/styles/scss/components.scss
+++ b/src/styles/scss/components.scss
@@ -18,3 +18,27 @@
 		color:$hoverColor;
 	}
 }
+
+@mixin primary-btn() {
+	display: inline-flex;
+	padding: 26px 60px;
+	color: #fff;
+	background: linear-gradient(135deg, $blue 10%, $dark 100%);
+	border: 0;
+	text-decoration: none;
+	@include font('w');
+	@include rounded(20px);
+	@include ease(.4s);
+	box-shadow: 40px 20px 120px fade-out($blue, .2);
+	span {
+		line-height: 1;
+		@include ease(.2s);
+		border-bottom: 2px fade-out(#fff, .2) solid;
+	}
+	&:hover {
+		box-shadow: 0 10px 100px fade-out($pink, .4);
+		span {
+			border-bottom-color: fade-out(#fff, .5);
+		}
+	}
+}
