Компонент hero десктоп

--- a/src/files/components/hero.html
+++ b/src/files/components/hero.html
@@ -1,6 +1,7 @@
 <div class="hero">
 	<div class="hero__layout">
 		<div class="hero__summary">
+			<div class="hero__category">Personal web-site</div>
 			<h1 class="hero__title">Viktor Petukhov, <span>phd</span></h1>
 			<div class="hero__desc">Machine learning generalist who can help you to translate your business needs into technical requirements and bring them to life. Fast.</div>
 			<div class="hero__tags hero-tags">
@@ -16,15 +17,25 @@
 				</div>
 				<div class="hero-tags__group">
 					<ul class="hero-tags__list">
-						<li class="hero-tags__item">Python</li>
-						<li class="hero-tags__item">Julia</li>
-						<li class="hero-tags__item">R</li>
-						<li class="hero-tags__item">C++</li>
-						<li class="hero-tags__item">2039 citations according to Google Scholar</li>
+						<li class="hero-tags__item hero-tags__item--dark">Python</li>
+						<li class="hero-tags__item hero-tags__item--dark">Julia</li>
+						<li class="hero-tags__item hero-tags__item--dark">R</li>
+						<li class="hero-tags__item hero-tags__item--dark">C++</li>
+						<li class="hero-tags__item hero-tags__item--dark">2039 citations according to Google Scholar</li>
 					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="hero__cover">COVER</div>
+		<div class="hero__cover hero-cover">
+			<img class="hero-cover__img" src="./img/ava.jpg" alt="" />
+			<div class="hero-cover__shape hero-cover__shape--1"></div>
+			<div class="hero-cover__shape hero-cover__shape--2"></div>
+			<div class="hero-cover__shape hero-cover__shape--3"></div>
+			<div class="hero-cover__shape hero-cover__shape--4"></div>
+			<div class="hero-cover__shape hero-cover__shape--5"></div>
+
+			<div class="hero-cover__stain hero-cover__stain--1"></div>
+			<div class="hero-cover__stain hero-cover__stain--2"></div>
+		</div>
 	</div>
 </div>
