--- a/src/styles/scss/base.scss
+++ b/src/styles/scss/base.scss
@@ -4,8 +4,8 @@
 @import "breakpoints";
 @import "snippets";
 @import "fonts";
-@import "common";
 @import "components";
+@import "app";
 
 // Vendors
 
