Компонент projects десктоп

--- a/src/files/components/help.html
+++ b/src/files/components/help.html
@@ -1,8 +1,9 @@
 <div class="help section">
 	<div class="help__layout">
-		<div class="help__header">
-			<h2 class="help__title">What can i help with</h2>
-			<div class="help__description">Adding AI to your organization: evaluating your ideas, building a prototype and getting funding</div>
+		<div class="help__stain help__stain--top"></div>
+		<div class="help__header section__header">
+			<h2 class="help__title section__title">What can i help with</h2>
+			<div class="help__desc section__desc">Adding AI to your organization: evaluating your ideas, building a prototype and getting funding</div>
 		</div>
 		<div class="help__body">
 			<div class="help__section">
@@ -48,4 +49,5 @@
 			</div>
 		</div>
 	</div>
+	<div class="help__stain help__stain--bottom"></div>
 </div>
