--- a/src/files/components/projects.html
+++ b/src/files/components/projects.html
@@ -1,61 +1,70 @@
 <div class="projects">
 	<div class="projects__layout">
-		<div class="projects__header">
-			<div class="projects__title">Check out completed projects to see how I can be useful to your business</div>
-			<div class="projects__desc">It is important to keep in mind that most of my work is under NDA</div>
+		<div class="projects__stain projects__stain--top"></div>
+		<div class="projects__header section__header">
+			<div class="projects__title section__title">Check out completed projects to see how I can be useful to your business</div>
+			<div class="projects__desc section__desc">It is important to keep in mind that most of my work is under NDA</div>
 		</div>
 		<div class="projects__body">
 			<div class="projects__list">
 				<div class="projects__item project">
-					<div class="project__title">Viaduct</div>
-					<div class="project__tags project-tags">
-						<ul class="project-tags__list">
-							<li class="project-tags__item">R&D</li>
-							<li class="project-tags__item">interpretability</li>
-						</ul>
-					</div>
-					<div class="project__desc">
-						R&D, developing of a novel algorithm for interpretable detection of truck failures
-					</div>
+					<a class="project__link" href="#">
+						<div class="project__title">Viaduct</div>
+						<div class="project__tags project-tags">
+							<ul class="project-tags__list">
+								<li class="project-tags__item">R&D</li>
+								<li class="project-tags__item">interpretability</li>
+							</ul>
+						</div>
+						<div class="project__desc">
+							R&D, developing of a novel algorithm for interpretable detection of truck failures
+						</div>
+					</a>
 				</div>
 				<div class="projects__item project">
-					<div class="project__title">Talist</div>
-					<div class="project__tags project-tags">
-						<ul class="project-tags__list">
-							<li class="project-tags__item">strategy</li>
-							<li class="project-tags__item">NLP</li>
-							<li class="project-tags__item">scrapping</li>
-							<li class="project-tags__item">analytics</li>
-						</ul>
-					</div>
-					<div class="project__desc">
-						Analyzed thousands of job ads within the alternative protein industry, which provided major improvements for business strategy of the HR agency working within it.
-					</div>
+					<a class="project__link" href="#">
+						<div class="project__title">Talist</div>
+						<div class="project__tags project-tags">
+							<ul class="project-tags__list">
+								<li class="project-tags__item">strategy</li>
+								<li class="project-tags__item">NLP</li>
+								<li class="project-tags__item">scrapping</li>
+								<li class="project-tags__item">analytics</li>
+							</ul>
+						</div>
+						<div class="project__desc">
+							Analyzed thousands of job ads within the alternative protein industry, which provided major improvements for business strategy of the HR agency working within it.
+						</div>
+					</a>
 				</div>
 				<div class="projects__item project">
-					<div class="project__title">Drone Solutions</div>
-					<div class="project__tags project-tags">
-						<ul class="project-tags__list">
-							<li class="project-tags__item">strategy</li>
-							<li class="project-tags__item">fundraising</li>
-							<li class="project-tags__item">CV</li>
-						</ul>
-					</div>
-					<div class="project__desc">
-						Created a strategy for creating a computer vision department in a drone-producing start-up. It helped to raise >$300k funding and the department was successfully created.
-					</div>
+					<a class="project__link" href="#">
+						<div class="project__title">Drone Solutions</div>
+						<div class="project__tags project-tags">
+							<ul class="project-tags__list">
+								<li class="project-tags__item">strategy</li>
+								<li class="project-tags__item">fundraising</li>
+								<li class="project-tags__item">CV</li>
+							</ul>
+						</div>
+						<div class="project__desc">
+							Created a strategy for creating a computer vision department in a drone-producing start-up. It helped to raise >$300k funding and the department was successfully created.
+						</div>
+					</a>
 				</div>
 				<div class="projects__item project">
-					<div class="project__title">PhysTech Ventures</div>
-					<div class="project__tags project-tags">
-						<ul class="project-tags__list">
-							<li class="project-tags__item">fundraising</li>
-							<li class="project-tags__item">bio</li>
-						</ul>
-					</div>
-					<div class="project__desc">
-						Evaluated machine learning methods of biotech companies, which applied for funding.
-					</div>
+					<a class="project__link" href="#">
+						<div class="project__title">PhysTech Ventures</div>
+						<div class="project__tags project-tags">
+							<ul class="project-tags__list">
+								<li class="project-tags__item">fundraising</li>
+								<li class="project-tags__item">bio</li>
+							</ul>
+						</div>
+						<div class="project__desc">
+							Evaluated machine learning methods of biotech companies, which applied for funding.
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
