--- a/src/styles/scss/components/projects.scss
+++ b/src/styles/scss/components/projects.scss
@@ -1,9 +1,28 @@
 .projects {
+	z-index: 900;
+	padding: 100px 0;
 
 	&__layout {
+		@include layout();
+	}
+
+	&__stain {
+		position: absolute;
+		@include rounded(100%);
+		pointer-events: none;
+	}
+
+	&__stain--top {
+		top: -40px;
+		left: -150px;
+		width: 400px;
+		height: 200px;
+		background: radial-gradient(fade-out($blue, 0) 0%, fade-out($pink, .8) 50%);
+		filter: blur(40px);
 	}
 
 	&__header {
+		margin-bottom: 100px;
 	}
 
 	&__title {
@@ -16,15 +35,46 @@
 	}
 
 	&__list {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 -20px;
 	}
 
 	&__item {
+		width: 25%;
 	}
 }
 
 .project {
+	margin: 0 20px;
+
+	&__link {
+		display: block;
+		text-decoration: none;
+		@include link($dark, $blue);
+		height: 100%;
+		padding: 50px;
+		background-color: fade-out($dark, .95);
+		@include rounded(20px);
+		@include ease(.3s);
+	}
+
+	
+	&:hover &__link {
+		background-color: #fff;
+		box-shadow: 40px 40px 100px fade-out($blue, .8), -40px -40px 100px fade-out($pink, .9);
+	}
 
 	&__title {
+		@include font('w');
+		font-size: 2em;
+		line-height: 1;
+		text-transform: uppercase;
+		@include ease(.2s);
+	}
+
+	&:hover &__title {
+		color: $blue;
 	}
 
 	&__tags {
@@ -35,10 +85,24 @@
 }
 
 .project-tags {
-
+	margin: 20px 0;
 	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0;
+		padding: 0;
 	}
 
 	&__item {
+		list-style: none;
+		margin: 0 2px 2px 0;
+		padding: 4px 14px;
+		list-style: none;
+		color: #fff;
+		background-color: $blue;
+		border: 1px transparent solid;
+		white-space: nowrap;
+		font-size: .8em;
+		@include rounded(100em);
 	}
 }
