Компонент steps десктоп

--- a/src/files/components/steps.html
+++ b/src/files/components/steps.html
@@ -1,26 +1,33 @@
 <div class="steps">
+	<div class="steps__stain steps__stain--top"></div>
 	<div class="steps__layout">
-		<div class="steps__header">
-			<div class="steps__title">Steps to get started</div>
-			<div class="steps__desc">It is important to keep in mind that most of my work is under NDA</div>
+		<div class="steps__header section__header">
+			<div class="steps__title section__title">Steps to get started</div>
+			<div class="steps__desc section__desc">It is important to keep in mind that most of my work is under NDA</div>
 		</div>
 		<div class="steps__body">
 			<div class="steps__list">
 				<div class="steps__item step">
-					<div class="step__number">1</div>
+					<div class="step__number"><span>1</span></div>
 					<div class="step__title">Task Discussion</div>
 					<div class="step__desc">We study the current state of affairs. We clarify with the client what data and resources are available.</div>
 				</div>
 				<div class="steps__item step">
-					<div class="step__number">2</div>
+					<div class="step__number"><span>2</span></div>
 					<div class="step__title">Discussion of the concrete steps of the work</div>
 					<div class="step__desc">We discuss possible options for solving the client's problem, choose tools.</div>
 				</div>
 				<div class="steps__item step">
-					<div class="step__number">4</div>
+					<div class="step__number"><span>3</span></div>
 					<div class="step__title">Formulating a proposal</div>
 					<div class="step__desc">After discussing the steps, I
 						formulate a concrete plan with future results and timelines.</div>
+				</div>
+				<div class="steps__item step">
+					<div class="step__number"><span>4</span></div>
+					<div class="step__title">Getting Started</div>
+					<div class="step__desc">I work incrementally, that is, the results are visible after each iteration, usuallyevery week.
+					</div>
 				</div>
 			</div>
 		</div>
