Компонент contacts десктоп

--- a/src/files/components/request.html
+++ b/src/files/components/request.html
@@ -1,11 +1,12 @@
 <div class="request">
 	<div class="request__layout">
-		<div class="request__header">
-			<div class="request__header">Share your contacts to discuss your ideas and needs</div>
-			<div class="request__desc">If there is no specific request, but you are interested in how machine learning can be useful to you — feel free to write too</div>
+		<div class="request__stain request__stain--top"></div>
+		<div class="request__header section__header">
+			<div class="request__title section__title">Share your contacts to discuss your ideas and needs</div>
+			<div class="request__desc section__desc">If there is no specific request, but you are interested in how machine learning can be useful to you — feel free to write too</div>
 		</div>
 		<div class="request__body">
-			<div class="request__contacts">
+			<div class="request__summary">
 				<div class="request__contacts">
 					<div class="request__contacts-title">If you need to attach any materials — send your request to e-mail</div>
 					<div class="request__contacts-mail">
@@ -22,4 +23,5 @@
 			</div>
 		</div>
 	</div>
+	<div class="request__stain request__stain--bottom"></div>
 </div>
