--- a/src/files/components/social.html
+++ b/src/files/components/social.html
@@ -1,8 +1,8 @@
 <ul class="social">
 	<li class="social__item">
-		<a class="social__link" href="https://facebook.com/" target="_blank">Facebook</a>
+		<a class="social__link" href="https://facebook.com/" target="_blank">Facebook<span>→</span></a>
 	</li>
 	<li class="social__item">
-		<a class="social__link" href="https://instagram.com/" target="_blank">Instagram</a>
+		<a class="social__link" href="https://instagram.com/" target="_blank">Instagram<span>→</span></a>
 	</li>
 </ul>
