--- a/src/files/components/form.html
+++ b/src/files/components/form.html
@@ -14,8 +14,5 @@
 	<div class="form__item">
 		<textarea class="form__input form__input--textarea" placeholder="Request"></textarea>
 	</div>
-	<div class="form__item">
-		<textarea class="form__input form__input--textarea" placeholder="Request"></textarea>
-	</div>
-	<button class="form__btn">Send</button>
+	<button class="form__btn"><span>Send</span></button>
 </div>
