--- a/src/styles/scss/components/request.scss
+++ b/src/styles/scss/components/request.scss
@@ -1,35 +1,102 @@
 .request {
 
+	padding: 100px 0;
+	background-color: $dark;
+	
 	&__layout {
+		@include layout();
+	}
+
+	&__stain {
+		position: absolute;
+		@include rounded(100%);
+		pointer-events: none;
+	}
+
+	&__stain--top {
+		top: -80px;
+		left: -200px;
+		width: 600px;
+		height: 320px;
+		background: radial-gradient(fade-out($blue, 0) 0%, fade-out($pink, .6) 50%);
+		filter: blur(80px);
+	}
+
+	&__stain--bottom {
+		bottom: -400px;
+		right: -600px;
+		width: 1400px;
+		height: 1000px;
+		z-index: 0;
+		background: radial-gradient(fade-out($blue, 0) 0%, fade-out($pink, .8) 50%);
+		filter: blur(120px);
+	}
+
+	&__title, &__desc {
+		color: #fff;
 	}
 
 	&__header {
+		margin-bottom: 100px;
 	}
 
 	&__desc {
 	}
 
 	&__body {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__summary {
+		width: 50%;
+		display: flex;
+		flex-direction: column;
 	}
 
 	&__contacts {
+		color: #fff;
+		border-left: 1px #fff solid;
+		padding-left: 40px;
 	}
 
 	&__contacts-title {
+		width: 50%;
 	}
 
 	&__contacts-mail {
+		display: flex;
+		margin-top: 20px;
 	}
 
 	&__contacts-mail-link {
+		display: inline-flex;
+		padding: 5px 40px;
+		@include link(#fff, #fff);
+		border: 1px #fff solid;
+		font-size: 1.8em;
+		@include rounded(100em);
+		&:hover {
+			background-color: $blue;
+			border-color: $blue;
+		}
 	}
 
 	&__contacts-mail-copy {
+		margin-left: 10px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 60px;
+		border: 1px #fff solid;
+		@include rounded(100em);
 	}
 
 	&__social {
+		margin-top: auto;
 	}
 
 	&__form {
+		width: 40%;
 	}
 }
