Компонент help-accordion десктоп

--- a/src/files/components/help.html
+++ b/src/files/components/help.html
@@ -10,19 +10,19 @@
 				<div class="help__section-title">Machine learning</div>
 				<div class="help__accordion js-help-accordion">
 					<div class="help__accordion-item">
-						<div class="help__accordion-title">Direct work on your project</div>
+						<div class="help__accordion-title">Direct work on your project<span class="help__accordion-switcher"></span></div>
 						<div class="help__accordion-desc">Analysing your data or developing novel machine learning methods for your problem</div>
 					</div>
 					<div class="help__accordion-item">
-						<div class="help__accordion-title">R&D</div>
+						<div class="help__accordion-title">R&D<span class="help__accordion-switcher"></span></div>
 						<div class="help__accordion-desc">Gathering data and building an MVP for testing new ideas</div>
 					</div>
 					<div class="help__accordion-item">
-						<div class="help__accordion-title">Adding AI to your organization</div>
+						<div class="help__accordion-title">Adding AI to your organization<span class="help__accordion-switcher"></span></div>
 						<div class="help__accordion-desc">Evaluating your ideas, building a prototype and getting funding.If you don’t have an AI department yet, but you think you need one, I can help that. From evaluating your ideas and prototyping the service to helping with funding applications and finding people for the department</div>
 					</div>
 					<div class="help__accordion-item">
-						<div class="help__accordion-title">Make your organization data driven</div>
+						<div class="help__accordion-title">Make your organization data driven<span class="help__accordion-switcher"></span></div>
 						<div class="help__accordion-desc">Having right data can drastically improve strategic decision making, as well as company operations. I can help you to set up data pipelines, which would guide your decisions by providing insights from both data within your company and external sources, relevant to your problem.</div>
 					</div>
 				</div>
