Папка pages, мелкие правки стилей

--- a/src/files/components/mainmenu.html
+++ b/src/files/components/mainmenu.html
@@ -1,19 +1,19 @@
 <div class="mainmenu">
 	<ul class="mainmenu__list">
 		<li class="mainmenu__item">
-			<a class="mainmenu__link mainmenu__link--active" href="#">Main page</a>
+			<a class="mainmenu__link mainmenu__link--active" href="./index.html">Main page</a>
 		</li>
 		<li class="mainmenu__item">
-			<a class="mainmenu__link" href="#">Career</a>
+			<a class="mainmenu__link" href="./career.html">Career</a>
 		</li>
 		<li class="mainmenu__item">
-			<a class="mainmenu__link" href="#">For collaborators</a>
+			<a class="mainmenu__link" href="./collaborators.html">For collaborators</a>
 		</li>
 		<li class="mainmenu__item">
-			<a class="mainmenu__link" href="#">About me</a>
+			<a class="mainmenu__link" href="./about.html"">About me</a>
 		</li>
 		<li class="mainmenu__item">
-			<a class="mainmenu__link" href="#">Contact</a>
+			<a class="mainmenu__link" href="./contacts.html">Contacts</a>
 		</li>
 	</ul>
 </div>
