--- a/src/styles/scss/components/jump.scss
+++ b/src/styles/scss/components/jump.scss
@@ -9,7 +9,7 @@
 		z-index: 9000;
 		background-color: fade-out(#fff, .6);
 		@include rounded(100%);
-		@include icon-stroke('arrow', #fff, 1px);
+		@include icon-stroke('arrow', $dark, 1px);
 		@include ease(.2s);
 		transform: rotate(90deg);
 		cursor: pointer;
