Компоненты page-header, page-nav десктоп

--- a/src/styles/scss/base.scss
+++ b/src/styles/scss/base.scss
@@ -24,3 +24,6 @@
 @import "components/spinner";
 @import "components/steps";
 @import "components/spinner";
+
+@import "components/page-header";
+@import "components/page-nav";
