--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -28,7 +28,7 @@ body {
 	font-size: 20px;
 	line-height: 1.3;
 	color: $dark;
-	background-color: #111;
+	background-color: $dark;
 }
 
 @mixin layout() {
