Компонент portfolio десктоп

--- a/src/styles/scss/base.scss
+++ b/src/styles/scss/base.scss
@@ -28,3 +28,4 @@
 @import "components/page-header";
 @import "components/page-nav";
 @import "components/experience";
+@import "components/portfolio";
