--- a/src/styles/scss/base.scss
+++ b/src/styles/scss/base.scss
@@ -29,3 +29,4 @@
 @import "components/page-nav";
 @import "components/experience";
 @import "components/portfolio";
+@import "components/publications";
