Переход на eleventy

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -30,3 +30,5 @@
 @import "components/experience";
 @import "components/portfolio";
 @import "components/publications";
+@import "components/collab-types";
+@import "components/relevant-projects";
