--- a/src/includes/hero.njk
+++ b/src/includes/hero.njk
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<div class="hero__cover hero-cover">
-			<img class="hero-cover__img" src="./img/ava.jpg" alt="" />
+			<img class="hero-cover__img" src="/img/ava.jpg" alt="" />
 			<div class="hero-cover__shape hero-cover__shape--1"></div>
 			<div class="hero-cover__shape hero-cover__shape--2"></div>
 			<div class="hero-cover__shape hero-cover__shape--3"></div>
