--- a/src/includes/page-header.njk
+++ b/src/includes/page-header.njk
@@ -1,6 +1,6 @@
 <div class="page-header">
 	<div class="page-header__layout">
-		<div class="page-header__title section__title">Education, degrees<span class="br"></span>and work experience</div>
+		<div class="page-header__title section__title">{{ title | safe }}</div>
 		<div class="page-header__stain page-header__stain--1"></div>
 		<div class="page-header__stain page-header__stain--2"></div>
 	</div>
