--- a/src/includes/full-footer.njk
+++ b/src/includes/full-footer.njk
@@ -1,24 +1,25 @@
 <div class="request">
 	<div class="request__layout">
 		<div class="request__stain request__stain--top"></div>
-		<div class="request__header">
-			<div class="request__title section__title">Get in touch</div>
+		<div class="request__header section__header">
+			<div class="request__title section__title">Share your contacts to discuss your ideas and needs</div>
+			<div class="request__desc section__desc">If there is no specific request, but you are interested in how machine learning can be useful to you — feel free to write too</div>
 		</div>
 		<div class="request__body">
 			<div class="request__summary">
 				<div class="request__contacts">
 					<div class="request__contacts-title">If you need to attach any materials — send your request to e-mail</div>
 					<div class="request__contacts-mail">
-						<a class="request__contacts-mail-link" href="mailto:aaaaa@mail.ru" target="_blank">aaaaa@mail.ru</a>
+						<a class="request__contacts-mail-link" href="mailto:{{ metadata.mailto }}" target="_blank">{{ metadata.mailto }}</a>
 						<div class="request__contacts-mail-copy">🔗</div>
 					</div>
 				</div>
 				<div class="request__social">
-					//= social.html
+					{% include "social.njk" %}
 				</div>
 			</div>
 			<div class="request__form">
-				//= form.html
+				{% include "form.njk" %}
 			</div>
 		</div>
 	</div>
