--- a/src/about.njk
+++ b/src/about.njk
@@ -1,9 +1,10 @@
 ---
 layout: default.njk
-title: 'About Me'
+pageTitle: 'About Me'
 eleventyNavigation:
  key: About
  order: 4
 ---
 
+{% include "fun-facts.njk" %}
 {% include "full-footer.njk" %}
