--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -32,3 +32,4 @@
 @import "components/publications";
 @import "components/collab-types";
 @import "components/relevant-projects";
+@import "components/fun-facts";
