Компонент journey десктоп

--- a/src/about.njk
+++ b/src/about.njk
@@ -6,5 +6,7 @@ eleventyNavigation:
  order: 4
 ---
 
+{% include "journey.njk" %}
+{% include "divider.njk" %}
 {% include "fun-facts.njk" %}
 {% include "full-footer.njk" %}
