--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -33,3 +33,5 @@
 @import "components/collab-types";
 @import "components/relevant-projects";
 @import "components/fun-facts";
+@import "components/journey";
+@import "components/divider";
