--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -1,11 +1,13 @@
 ---
 layout: default.njk
+permalink: "about/"
 pageTitle: 'About Me'
 eleventyNavigation:
  key: About
  order: 4
 ---
 
+{% include "about-header.njk" %}
 {% include "journey.njk" %}
 {% include "divider.njk" %}
 {% include "fun-facts.njk" %}
