--- a/src/pages/career.njk
+++ b/src/pages/career.njk
@@ -1,5 +1,6 @@
 ---
 layout: default.njk
+permalink: "career/"
 pageTitle: 'Career'
 title: 'Education, degrees<span class="br"></span>and work experience'
 eleventyNavigation:
