--- a/src/pages/collaborators.njk
+++ b/src/pages/collaborators.njk
@@ -1,5 +1,6 @@
 ---
 layout: default.njk
+permalink: "collaborators/"
 pageTitle: 'Collaborators'
 title: 'My scientific interests<span class="br"></span>for collaborations'
 eleventyNavigation:
