--- a/src/css/components/hero.scss
+++ b/src/css/components/hero.scss
@@ -1,49 +1,81 @@
 .hero {
-	padding: 100px 0;
+	padding: 40px 0;
 	z-index: 1000;
+	@include media('sm') {
+		padding: 100px 0;
+	}
 	&__layout {
 		@include layout();
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
+		@include media('sm') {
+			flex-wrap: nowrap;
+		}
 	}
 
 	&__summary {
-		width: 70%;
+		width: 100%;
 		z-index: 1;
+		order: 2;
+		margin-top: 60px;
+		@include media('sm') {
+			width: 70%;
+			order: 1;
+			margin-top: 0;
+		}
 	}
 
 	&__category {
 		margin-bottom: 20px;
 		color: $blue;
-		font-size: 1.2em;
+		font-size: 1em;
+		@include media('sm') {
+			font-size: 1.2em;
+		}
 	}
 
 	&__title {
 		margin: 0;
 		color: #fff;
 		@include font('w');
-		font-size: 4em;
+		font-size: 2em;
 		line-height: 1;
 		letter-spacing: 1px;
 		text-transform: uppercase;
+		@include media('sm') {
+			font-size: 4em;
+		}
 		span {
 			color: $blue;
 		}
 	}
 
 	&__desc {
-		width: 50%;
+		width: 100%;
 		margin-top: 20px;
 		color: #fff;
-		font-size: 1.2em;
+		font-size: 1em;
+		line-height: 1.2;
+		@include media('sm') {
+			width: 80%;
+			font-size: 1.2em;
+		}
 	}
 
 	&__tags {
-		margin-top: 40px;
+		margin-top: 20px;
+		@include media('sm') {
+			margin-top: 40px;
+		}
 	}
 
 	&__cover {
-		margin-top: 60px;
+		order: 1;
+		@include media('sm') {
+			margin-top: 60px;
+			order: 2;
+		}
 	}
 }
 .hero-tags {
@@ -59,15 +91,22 @@
 	}
 
 	&__item {
-		margin: 0 20px 20px 0;
-		padding: 8px 24px;
+		margin: 0 5px 5px 0;
+		padding: 4px 10px;
 		list-style: none;
 		color: #fff;
 		background-color: $blue;
 		border: 1px transparent solid;
-		font-size: 1.2em;
-		white-space: nowrap;
-		@include rounded(100em);
+		font-size: .8em;
+		white-space: normal;
+		@include rounded(20px);
+		@include media('sm') {
+			padding: 8px 24px;
+			margin: 0 20px 20px 0;
+			font-size: 1.2em;
+			white-space: nowrap;
+			@include rounded(100em);
+		}
 	}
 	
 	&__item--light {
@@ -85,13 +124,40 @@
 
 .hero-cover {
 
+	&__layout {
+		width: 150px;
+		height: 150px;
+		object-fit: cover;
+		@include media('sm') {
+			width: 400px;
+			height: 400px;
+		}
+	}
+
+	&__layout::before {
+		position: absolute;
+		width: 180px;
+		height: 180px;
+		top: 0;
+		left: 0;
+		background-image: url('../img/blenda.svg');
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: contain;
+		content: '';
+		transform: rotate(90deg);
+		@include media('sm') {
+			width: 460px;
+			height: 460px;
+		}
+	}
+
 	&__img {
 		position: relative;
-		z-index: 1;
-		width: 400px;
-		height: 400px;
+		width: 100%;
+		height: 100%;
 		@include rounded(20px);
-		object-fit: cover;
+		z-index: 1;
 	}
 
 	&__stain {
@@ -123,40 +189,6 @@
 		transform: rotate(45deg);
 		@include rounded(300px);
 		opacity: .3;
-	}
-
-	&__shape {
-		position: absolute;
-		width: 400px;
-		height: 400px;
-		@include rounded(20px);
-		border: 1px $blue solid;
-		pointer-events: none;
-	}
-
-	&__shape--1 {
-		top: 20px;
-		left: 20px;
-	}
-
-	&__shape--2 {
-		top: 20px;
-		left: 20px;
-	}
-	
-	&__shape--3 {
-		top: 40px;
-		left: 40px;
-	}
-	
-	&__shape--4 {
-		top: 60px;
-		left: 60px;
-	}
-
-	&__shape--5 {
-		top: 80px;
-		left: 80px;
 	}
 
 }
