--- a/src/css/components/projects.scss
+++ b/src/css/components/projects.scss
@@ -1,6 +1,9 @@
 .projects {
 	background-color: #fff;
-	padding: 100px 0 400px;
+	padding: 20px 0 200px;
+	@include media('sm') {
+		padding: 100px 0 400px;
+	}
 
 	&__layout {
 		@include layout();
@@ -22,7 +25,10 @@
 	}
 
 	&__header {
-		margin-bottom: 100px;
+		margin-bottom: 40px;
+		@include media('sm') {
+			margin-bottom: 100px;
+		}
 	}
 
 	&__title {
@@ -37,30 +43,41 @@
 	&__list {
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 		margin: 0 -20px;
+		@include media('sm') {
+			flex-wrap: nowrap;
+		}
 	}
 
 	&__item {
-		width: 25%;
+		width: 100%;
+		@include media('sm') {
+			width: 25%;
+		}
 	}
 }
 
 .project {
-	margin: 0 20px;
+	margin: 0 20px 20px;
+	@include media('sm') {
+		margin: 0 20px;
+	}
 
 	&__link {
 		display: block;
 		text-decoration: none;
 		@include link($dark, $blue);
 		height: 100%;
-		padding: 50px;
-		// background-color: fade-out($dark, .95);
+		padding: 30px;
 		background-color: mix($dark, #fff, 6%);
 		@include rounded(20px);
 		@include ease(.3s);
+		@include media('sm') {
+			padding: 50px;
+		}
 	}
 
-	
 	&:hover &__link {
 		background-color: #fff;
 		box-shadow: 40px 40px 100px fade-out($blue, .8), -40px -40px 100px fade-out($pink, .9);
@@ -68,10 +85,13 @@
 
 	&__title {
 		@include font('w');
-		font-size: 2em;
+		font-size: 1.2em;
 		line-height: 1;
 		text-transform: uppercase;
 		@include ease(.2s);
+		@include media('sm') {
+			font-size: 2em;
+		}
 	}
 
 	&:hover &__title {
@@ -82,6 +102,10 @@
 	}
 
 	&__desc {
+		font-size: .8em;
+		@include media('sm') {
+			font-size: 1em;
+		}
 	}
 }
 
@@ -97,13 +121,17 @@
 	&__item {
 		list-style: none;
 		margin: 0 2px 2px 0;
-		padding: 4px 14px;
+		padding: 2px 8px;
 		list-style: none;
 		color: #fff;
 		background-color: $blue;
 		border: 1px transparent solid;
 		white-space: nowrap;
-		font-size: .8em;
+		font-size: .6em;
 		@include rounded(100em);
+		@include media('sm') {
+			padding: 4px 14px;
+			font-size: .8em;
+		}
 	}
 }
