--- a/src/css/components/steps.scss
+++ b/src/css/components/steps.scss
@@ -1,5 +1,8 @@
 .steps {
-	padding-bottom: 100px;
+	padding-bottom: 0;
+	@include media('sm') {
+		padding-bottom: 100px;
+	}
 
 	&::after {
 		position: absolute;
@@ -55,27 +58,43 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
+		@include media('sm') {
+
+		}
 	}
 
 	&__item {
-		width: 16%;
+		width: 100%;
+		@include media('sm') {
+			width: 16%;
+		}
 	}
 }
 .step {
+	
 
 	opacity: .5;
 	@include ease(.2s);
+	margin-bottom: 40px;
+
+	@include media('sm') {
+		margin-bottom: 0;
+	}
 
 	&:hover {
 		opacity: 1;
 	}
 
 	&__number {
-		width: 200px;
-		height: 200px;
+		width: 100px;
+		height: 100px;
 		display: flex;
 		align-items: center;
 		color: #fff;
+		@include media('sm') {
+			width: 200px;
+			height: 200px;
+		}
 		span {
 			display: flex;
 			justify-content: center;
@@ -91,8 +110,13 @@
 	}
 
 	&:hover &__number span {
-		width: 160px;
-		height: 160px;
+		width: 80px;
+		height: 80px;
+		@include media('sm') {
+			width: 160px;
+			height: 160px;
+
+		}
 	}
 
 	&__title {
