--- a/src/includes/hero.njk
+++ b/src/includes/hero.njk
@@ -27,15 +27,13 @@
 			</div>
 		</div>
 		<div class="hero__cover hero-cover">
-			<img class="hero-cover__img" src="/img/ava.jpg" alt="" />
-			<div class="hero-cover__shape hero-cover__shape--1"></div>
-			<div class="hero-cover__shape hero-cover__shape--2"></div>
-			<div class="hero-cover__shape hero-cover__shape--3"></div>
-			<div class="hero-cover__shape hero-cover__shape--4"></div>
-			<div class="hero-cover__shape hero-cover__shape--5"></div>
+			<div class="hero-cover__layout">
+				<img class="hero-cover__img" src="/img/ava.jpg" alt="" />
+			</div>
 
 			<div class="hero-cover__stain hero-cover__stain--1"></div>
 			<div class="hero-cover__stain hero-cover__stain--2"></div>
+			
 		</div>
 	</div>
 </div>
